"Fix" drop down badge overflow bug.
This took longer than expected and isn’t 100% fixed, but it’s good
enough for the moment. The real fixes involves using tables :/

--- a/app/assets/stylesheets/components/dropdowns.css.scss
+++ b/app/assets/stylesheets/components/dropdowns.css.scss
@@ -1,4 +1,6 @@
 .dropdown-menu {
+  border: none;
+
   .form-control {
     margin: $padding-small-vertical $padding-small-horizontal;
     width: auto;
@@ -6,6 +8,10 @@
 
   .avatar {
     margin-right: $padding-small-horizontal;
+  }
+
+  > li > a > .badge {
+    margin-left: $padding-base-horizontal;
   }
 
   > .active .badge {
